--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,43 @@
+# Ignore docs files
+_gh_pages
+_site
+.ruby-version
+
+# Numerous always-ignore extensions
 *.diff
 *.err
 *.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
 
+# OS or Editor folders
 ._*
+.cache
+.DS_Store
+.idea
+.project
+.pydevproject
+.settings
+.tmproj
+*.esproj
 *.sublime-project
 *.sublime-workspace
+nbproject
+Thumbs.db
 
-# folders
-cache
+# Komodo
+.komodotools
+*.komodoproject
+
+# grunt-html-validation
+validation-report.json
+validation-status.json
+
+# Folders to ignore
 bower_components
 node_modules
